--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,5 +6,6 @@
 	},
 	"skinname-ridvan": "Ridvan",
 	"ridvan-skin-desc": "A skin created by [https://skins.wmflabs.org skins.wmflabs.org v.3.0]",
-	"ridvan-no-categories": "No categories."
+	"ridvan-no-categories": "No categories.",
+	"ridvan-mobile-links-label": "Links"
 }
