--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,5 +7,13 @@
 	"skinname-ridvan": "Ridvan",
 	"ridvan-skin-desc": "A skin created by [https://skins.wmflabs.org skins.wmflabs.org v.3.0]",
 	"ridvan-no-categories": "No categories.",
-	"ridvan-mobile-links-label": "Links"
+	"ridvan-mobile-links-label": "Links",
+	"czsearch-search-noresults-title": "No results for \"$1\"",
+	"czsearch-search-noresults-desc": "Check your spelling or try a different search term.",
+	"czsearch-search-fulltext": "Search text \"$1\"",
+	"searchsuggest-search": "Search",
+	"czsearch-search-editpage": "Edit or create page \"$1\"",
+	"czsearch-search-mediasearch": "Search for media files matching \"$1\"",
+	"czsearch-search-empty-desc": "Search for pages, media, and more",
+	"search-redirect": "(Redirects to $1)"
 }
