--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,4 +1,6 @@
 {
+	"ridvan-no-categories": "Sin categorías.",
+	"ridvan-mobile-links-label": "Enlaces",
 	"czsearch-search-noresults-title": "No hay resultados para «$1»",
 	"czsearch-search-noresults-desc": "Comprueba la ortografía o intenta con otro término.",
 	"czsearch-search-fulltext": "Buscar texto «$1»",
