--- a/i18n/fa.json
+++ b/i18n/fa.json
@@ -1,4 +1,6 @@
 {
+	"ridvan-no-categories": "بدون رده.",
+	"ridvan-mobile-links-label": "پیوندها",
 	"czsearch-search-noresults-title": "نتیجه‌ای برای «$1» یافت نشد",
 	"czsearch-search-noresults-desc": "املای خود را بررسی کنید یا عبارت دیگری را امتحان کنید.",
 	"czsearch-search-fulltext": "جستجوی متن «$1»",
