--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -1,4 +1,6 @@
 {
+	"ridvan-no-categories": "Aucune catégorie.",
+	"ridvan-mobile-links-label": "Liens",
 	"czsearch-search-noresults-title": "Aucun résultat pour « $1 »",
 	"czsearch-search-noresults-desc": "Vérifiez l’orthographe ou essayez un autre terme.",
 	"czsearch-search-fulltext": "Rechercher le texte « $1 »",
