--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,4 +1,6 @@
 {
+	"ridvan-no-categories": "Sem categorias.",
+	"ridvan-mobile-links-label": "Links",
 	"czsearch-search-noresults-title": "Nenhum resultado para \"$1\"",
 	"czsearch-search-noresults-desc": "Verifique a ortografia ou tente um termo diferente.",
 	"czsearch-search-fulltext": "Pesquisar texto \"$1\"",
