--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -1,4 +1,6 @@
 {
+	"ridvan-no-categories": "Нет категорий.",
+	"ridvan-mobile-links-label": "Ссылки",
 	"czsearch-search-noresults-title": "Нет результатов для «$1»",
 	"czsearch-search-noresults-desc": "Проверьте написание или попробуйте другой запрос.",
 	"czsearch-search-fulltext": "Найти текст «$1»",
