--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,4 +1,6 @@
 {
+	"skinname-ridvan": "Ridvan",
+	"ridvan-skin-desc": "Una reescritura de Skin:Chameleon utilizando estándares modernos, desarrollada inicialmente para Bahaipedia.org.",
 	"ridvan-no-categories": "Sin categorías.",
 	"ridvan-mobile-links-label": "Enlaces",
 	"czsearch-search-noresults-title": "No hay resultados para «$1»",
