--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,6 +1,6 @@
 {
 	"skinname-ridvan": "Ridvan",
-	"ridvan-skin-desc": "Uma reescrita do Skin:Chameleon usando padrões modernos, desenvolvida inicialmente para a Bahaipedia.org."
+	"ridvan-skin-desc": "Uma reescrita do Skin:Chameleon usando padrões modernos, desenvolvida inicialmente para a Bahaipedia.org.",
 	"ridvan-no-categories": "Sem categorias.",
 	"ridvan-mobile-links-label": "Links",
 	"czsearch-search-noresults-title": "Nenhum resultado para \"$1\"",
