--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,8 +1,8 @@
 {
-	"skinname-ridvan": "Ridvan",
-	"ridvan-skin-desc": "Eine Neuschreibung von Skin:Chameleon unter Verwendung moderner Standards, ursprünglich entwickelt für Bahaipedia.org.",
-	"ridvan-no-categories": "Keine Kategorien.",
-	"ridvan-mobile-links-label": "Links",
+	"skinname-ridvan": "Nightingale",
+	"nightingale-skin-desc": "Eine Neuschreibung von Skin:Chameleon unter Verwendung moderner Standards, ursprünglich entwickelt für Bahaipedia.org.",
+	"nightingale-no-categories": "Keine Kategorien.",
+	"nightingale-mobile-links-label": "Links",
 	"czsearch-search-noresults-title": "Keine Ergebnisse für „$1“",
 	"czsearch-search-noresults-desc": "Überprüfe deine Schreibweise oder versuche einen anderen Suchbegriff.",
 	"czsearch-search-fulltext": "Suche nach Text „$1“",
