--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,5 @@
 {
-	"skinname-ridvan": "Nightingale",
+	"skinname-nightingale": "Nightingale",
 	"nightingale-skin-desc": "A rewrite of Skin:Chameleon using modern standards, initially developed for Bahai.works.",
 	"nightingale-no-categories": "No categories.",
 	"nightingale-mobile-links-label": "Links",
