--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,5 +1,5 @@
 {
-	"skinname-ridvan": "Nightingale",
+	"skinname-nightingale": "Nightingale",
 	"nightingale-skin-desc": "Eine Neuschreibung von Skin:Chameleon unter Verwendung moderner Standards, ursprünglich entwickelt für Bahaipedia.org.",
 	"nightingale-no-categories": "Keine Kategorien.",
 	"nightingale-mobile-links-label": "Links",
