--- a/i18n/en.json
+++ b/i18n/en.json
@@ -11,5 +11,5 @@
 	"czsearch-search-mediasearch": "Search for media files matching \"$1\"",
 	"czsearch-search-empty-desc": "Search for pages, media, and more",
 	"search-redirect": "(Redirects to $1)",
-	"ridvan-darkmode-toggle": "Dark mode"
+	"nightingale-darkmode-toggle": "Dark mode"
 }
