--- a/i18n/de.json
+++ b/i18n/de.json
@@ -11,5 +11,5 @@
 	"czsearch-search-mediasearch": "Suche nach Mediendateien für „$1“",
 	"czsearch-search-empty-desc": "Suche nach Seiten, Medien und mehr",
 	"search-redirect": "(Weiterleitung nach $1)",
-	"ridvan-darkmode-toggle": "Dunkelmodus"
+	"nightingale-darkmode-toggle-darkmode-toggle": "Dunkelmodus"
 }
